--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Test build and deploy site
 on: [push]
 
 jobs:
-  test:
+  CI/CD:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
           username: 'ubuntu'   #ssh user name
           server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './public/*'  # 对应我们项目build的文件夹路径
+          local_path: './build/*'  # 对应我们项目build的文件夹路径
           remote_path: '/home/ubuntu/components'
 
 
