--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: 14
       - run: npm install
       - run: npm run-script build
+      - run: npm run-script storybook
 
       - uses: wlixcc/SFTP-Deploy-Action@v1.0 
         with:  
