--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,14 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: 14
-      - run: npm install
-      - run: npm run-script build
-      - run: npm run-script storybook
+      - run: npm run-script build-storybook
 
       - uses: wlixcc/SFTP-Deploy-Action@v1.0 
         with:  
           username: 'ubuntu'   #ssh user name
           server: '${{ secrets.SERVER_IP }}' #引用之前创建好的secret
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './build/*'  # 对应我们项目build的文件夹路径
+          local_path: './storybook-static/*'  # 对应我们项目build的文件夹路径
           remote_path: '/home/ubuntu/components'
 
 
