--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "aerman",
+  "name": "miever_components",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@storybook/addon-a11y": "^6.2.9",
     "@storybook/addon-storysource": "^6.2.9",
     "@testing-library/jest-dom": "^5.11.10",
@@ -65,6 +66,7 @@
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "jest": "^26.6.0"
+    "jest": "^26.6.0",
+    "storybook-facelift": "^6.9.0"
   }
 }
