--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-transition-group": "^4.4.2",
     "classname": "0.0.0",
     "classnames": "^2.3.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
