--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
   "name": "miever_components",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "build/index.js",
+  "module": "build/index.js",
+  "types": "build/index.d.ts",
+  "keywords": [
+    "Component",
+    "UI",
+    "React"
+  ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -28,11 +36,20 @@
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
+  "yalcWatch": {
+    "watchFolder": "build",
+    "buildWatchCommand": "tsc --watch",
+    "extensions": "js,png,svg,gif,jpeg,css"
+  },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run clean-build && npm run build-ts && npm run build-css",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "yalc-watch": "yalc-watch",
+    "clean-build": "rimraf ./build",
+    "build-ts": "tsc -p tsconfig.build.json",
+    "build-css": "node-sass ./src/Styles/index.scss ./build/index.css",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -72,6 +89,9 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
     "jest": "^26.6.0",
-    "storybook-facelift": "^6.9.0"
+    "rimraf": "^3.0.2",
+    "storybook-facelift": "^6.9.0",
+    "tsc-watch": "^4.5.0",
+    "yalc-watch": "^0.0.6"
   }
 }
