--- a/package.json
+++ b/package.json
@@ -1,43 +1,41 @@
 {
-  "name": "miever_components",
-  "version": "0.1.0",
+  "name": "miever_ui",
+  "version": "0.1.4",
   "private": false,
-  "main": "build/index.js",
-  "module": "build/index.js",
-  "types": "build/index.d.ts",
+  "author": "Miever",
+  "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "homepage": "https://github.com/Miever1/miever_ui",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:Miever1/miever_ui.git"
+  },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "Component",
     "UI",
-    "React"
+    "React",
+    "Miever",
+    "React Components Library"
   ],
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
-    "@storybook/addon-a11y": "^6.2.9",
-    "@storybook/addon-storysource": "^6.2.9",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/classnames": "^2.2.11",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-transition-group": "^4.4.2",
-    "classname": "0.0.0",
     "classnames": "^2.3.1",
-    "node-sass": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
-    "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
+  "peerDependencies": {
+    "react": ">=17.0.2",
+    "react-dom": ">=17.0.2"
+  },
   "yalcWatch": {
-    "watchFolder": "build",
+    "watchFolder": "dist",
     "buildWatchCommand": "tsc --watch",
     "extensions": "js,png,svg,gif,jpeg,css"
   },
@@ -45,13 +43,15 @@
     "start": "react-scripts start",
     "build": "npm run clean-build && npm run build-ts && npm run build-css",
     "test": "react-scripts test",
+    "lint": "eslint --ext js,ts,tsx src",
     "eject": "react-scripts eject",
     "yalc-watch": "yalc-watch",
-    "clean-build": "rimraf ./build",
+    "clean-build": "rimraf ./dist",
     "build-ts": "tsc -p tsconfig.build.json",
-    "build-css": "node-sass ./src/Styles/index.scss ./build/index.css",
+    "build-css": "node-sass ./src/Styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "prepublish": "npm run lint && npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -64,7 +64,8 @@
           "**/*.stories.*"
         ],
         "rules": {
-          "import/no-anonymous-default-export": "off"
+          "import/no-anonymous-default-export": "off",
+          "import/prefer-screen-queries": "off"
         }
       }
     ]
@@ -82,16 +83,33 @@
     ]
   },
   "devDependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "jest": "^26.6.0",
+    "@types/jest": "^26.0.24",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "rimraf": "^3.0.2",
     "storybook-facelift": "^6.9.0",
     "tsc-watch": "^4.5.0",
-    "yalc-watch": "^0.0.6"
+    "yalc-watch": "^0.0.6",
+    "@types/classnames": "^2.2.11",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-transition-group": "^4.4.2",
+    "node-sass": "^5.0.0",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.2.4",
+    "@storybook/addon-a11y": "^6.5.14",
+    "@storybook/addon-storysource": "^6.5.14",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3"
   }
 }
