--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "web-vitals": "^1.1.1"
   },
   "peerDependencies": {
+    "@emotion/react": ">=11.10.5",
+    "@emotion/styled": ">=11.10.5",
     "react": ">=17.0.2",
     "react-dom": ">=17.0.2"
   },
@@ -84,33 +86,34 @@
     ]
   },
   "devDependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@storybook/addon-a11y": "^6.5.14",
     "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-docs": "^6.5.15",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-storysource": "^6.5.14",
     "@storybook/node-logger": "^6.2.9",
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.2.9",
-    "@types/jest": "^26.0.24",
-    "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "rimraf": "^3.0.2",
-    "storybook-facelift": "^6.9.0",
-    "tsc-watch": "^4.5.0",
-    "yalc-watch": "^0.0.6",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
     "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-transition-group": "^4.4.2",
+    "husky": "^8.0.2",
+    "jest": "^29.3.1",
     "node-sass": "^5.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "4.0.3",
+    "rimraf": "^3.0.2",
+    "storybook-facelift": "^6.9.0",
+    "tsc-watch": "^4.5.0",
     "typescript": "^4.2.4",
-    "@storybook/addon-a11y": "^6.5.14",
-    "@storybook/addon-storysource": "^6.5.14",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3"
+    "yalc-watch": "^0.0.6"
   }
 }
