--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "React Components Library"
   ],
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": ">=11.10.5",
+    "@emotion/styled": ">=11.10.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.19",
     "classnames": "^2.3.1",
+    "rc-tooltip": "^5.2.2",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.1"
   },
