--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "build-css": "node-sass ./src/Styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prepublish": "npm run lint && npm run build"
+    "prepublish": "npm run lint && npm run build",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -107,7 +108,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-transition-group": "^4.4.2",
-    "husky": "^8.0.2",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
