--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "miever_ui",
-  "version": "0.2.7",
+  "version": "0.2.9",
   "private": false,
   "author": "Miever",
   "license": "MIT",
@@ -23,13 +23,14 @@
     "React Components Library"
   ],
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@emotion/react": ">=11.10.5",
+    "@emotion/styled": ">=11.10.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.19",
     "classnames": "^2.3.1",
+    "rc-tooltip": "^5.2.2",
     "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.1"
   },
@@ -56,7 +57,8 @@
     "build-css": "node-sass ./src/Styles/index.scss ./dist/index.css",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "prepublish": "npm run lint && npm run build"
+    "prepublish": "npm run lint && npm run build",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -106,7 +108,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-transition-group": "^4.4.2",
-    "husky": "^8.0.2",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "node-sass": "^5.0.0",
     "react": "17.0.2",
