--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "miever_ui",
-  "version": "0.3.0",
+  "version": "0.2.6",
   "private": false,
   "author": "Miever",
-  "license": "MIT",
+  "license": "MPL-2.0 license",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -16,8 +16,7 @@
     "dist"
   ],
   "keywords": [
-    "Component",
-    "UI",
+    "React UI Component",
     "React",
     "Miever",
     "React Components Library"
