--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
       - uses:  'phips28/gh-action-bump-version@master'
         env:
+          PACKAGEJSON_DIR: '../../'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag-prefix:  'v'
