--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,12 +11,25 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses:  'phips28/gh-action-bump-version@master'
-        env:
-          PACKAGEJSON_DIR: '../../'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       - name: 'Checkout source code'
+        uses: 'actions/checkout@v2'
         with:
-          tag-prefix:  'v'
+          ref: ${{ github.ref }}
+      - name: 'cat package.json'
+        run: cat ./package.json
+      - name: 'Automated Version Bump'
+        id: version-bump
+        uses: 'phips28/gh-action-bump-version@master'
+        with:
+          tag-prefix: 'v'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: 'cat package.json'
+        run: cat ./package.json
+      - name: 'Output Step'
+        env:
+          NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
+        run: echo "new tag $NEW_TAG"
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
