feat: add publish action, Publishes a Node.js package to npm.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,11 +10,11 @@ on:
 
 jobs:
   bump-version:
+    id: version-bump
     name: 'Bump Version on release created'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - id: version-bump
       - uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -23,8 +23,6 @@ jobs:
 
   run-build:
     name: 'Library build'
-    env:
-        NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
     needs: bump-version
     runs-on: ubuntu-latest
     steps:
@@ -32,6 +30,8 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
+        env:
+          NEW_TAG: ${{ steps.version-bump.outputs.newTag }}
       - run: npm ci
       - run: npm run build
 
