--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,9 +26,11 @@ jobs:
     needs: bump-version
     runs-on: ubuntu-latest
     steps:
+      - uses: dawidd6/action-get-tag@v1
+        with:
+          strip_v: true
+        run: echo  ${{ steps.version_bump.outputs.newTag }}
       - uses: actions/checkout@v3
-        env:
-          NEW_TAG: ${{ steps.version_bump.outputs.newTag }}
       - uses: actions/setup-node@v3
         with:
           node-version: 14
