--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,7 +29,7 @@ jobs:
       - uses: dawidd6/action-get-tag@v1
         with:
           strip_v: true
-        run: echo  ${{ steps.version_bump.outputs.newTag }}
+      - run: echo  ${{ steps.version_bump.outputs.newTag }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
