--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,9 +4,8 @@
 name: Node.js Package
 
 on:
-  push:
-    branches:
-      - 'feature/*'
+  release:
+    types: [created]
 
 jobs:
   bump-version:
@@ -20,6 +19,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           version-type:  'patch'
+          tag-prefix:  'v'
 
   run-build:
     name: 'Library build'
@@ -29,7 +29,7 @@ jobs:
       - uses: dawidd6/action-get-tag@v1
         with:
           strip_v: true
-      - run: echo  ${{ steps.version_bump.outputs.newTag }}
+      - run: echo ${{ steps.version_bump.outputs.newTag }}
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
