--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -5,9 +5,20 @@ name: Publish Package
 
 on:
   tags:        
-      - v*
+      - v0.*
 
 jobs:
+  run-build:
+    name: 'Library build'
+    needs: bump-version
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+      - run: npm ci
+      - run: npm run build
   publish-npm:
     name: "Publish to npm"
     needs: run-build
