feat: add publish action, Publishes a Node.js package to npm.

--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -4,9 +4,10 @@
 name: Publish Package
 
 on:
- push:
-    tags:        
-      - 'v*'
+  workflow_dispatch: {}
+  push:
+      tags:        
+        - 'v*'
 
 jobs:
   run-build:
