--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -6,8 +6,8 @@ name: Publish Package
 on:
   workflow_dispatch: {}
   push:
-      tags:        
-        - 'v*'
+    branches: 
+      - master 
 
 jobs:
   run-build:
