--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -6,12 +6,14 @@ name: Node.js Package
 on:
   push:
     branches:
-      - 'master'
+      - 'feature/*'
 
 jobs:
   bump-version:
     name: 'Bump Version on release created'
     runs-on: ubuntu-latest
+    outputs:
+      new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
       - uses: actions/checkout@v3
       - uses:  'phips28/gh-action-bump-version@master'
@@ -20,3 +22,32 @@ jobs:
         with:
           version-type:  'patch'
           tag-prefix:  'v'
+  create-release:
+    name: Create GitHub Release
+    runs-on: ubuntu-latest
+    needs: [bump-version]
+    if: needs.bump-version.outputs.new-version != ''  steps:
+      - name: New Version
+        env:
+          NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
+        run: echo "new version $NEW_VERSION"    - name: Create Release
+        id: create-release
+        uses: marvinpinto/action-automatic-releases@latest
+        with:
+          automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
+          repo_token: ${{ github.token }}
+          prerelease: true
+  publish-npm:
+    name: "Publish to npm"
+    needs: run-build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
