--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -30,9 +30,9 @@ jobs:
     
     steps:
       - name: New Version
-        env:
-          NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
-        run: echo "new version $NEW_VERSION"    
+          env:
+            NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
+          run: echo "new version $NEW_VERSION"    
       - name: Create Release
         id: create-release
         uses: marvinpinto/action-automatic-releases@latest
@@ -43,9 +43,8 @@ jobs:
 
   publish-npm:
     name: "Publish to npm"
-    needs: run-build
+    needs: [create-release]
     runs-on: ubuntu-latest
-    needs: [bump-version]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
