--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -27,6 +27,7 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     needs: [bump-version]
+    if: needs.bump-version.outputs.new-version != ''
     
     steps:
       - name: New Version
