--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -16,6 +16,7 @@ jobs:
       new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
       - uses: actions/checkout@v3
+      id: version-bump
       - uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
