--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -11,18 +11,19 @@ on:
 jobs:
   bump-version:
     name: 'Bump Version on release created'
-    id: version-bump
     runs-on: ubuntu-latest
     outputs:
       new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
-      - uses: actions/checkout@v3
-      - uses:  'phips28/gh-action-bump-version@master'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          version-type:  'patch'
-          tag-prefix:  'v'
+      - name: "bump version"
+        id: version-bump
+        uses: actions/checkout@v3
+        uses:  'phips28/gh-action-bump-version@master'
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            version-type:  'patch'
+            tag-prefix:  'v'
 
   create-release:
     name: Create GitHub Release
