--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -15,17 +15,9 @@ jobs:
     outputs:
       new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
-      - name: Create Release
-        id: create-release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
-          repo_token: ${{ github.token }}
-          prerelease: true
-        uses: actions/checkout@v3
-      - name: "bump version"
-        id: version-bump
-        uses:  'phips28/gh-action-bump-version@master'
+      - uses: actions/checkout@v3
+      - id: version-bump
+      - uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
