--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -9,6 +9,15 @@ on:
       - 'feature/*'
 
 jobs:
+  verification:
+    name: Trigger - Lint, Test & Build
+    runs-on: ubuntu-latest  steps:
+      - name: Trigger Workflow
+        uses: benc-uk/workflow-dispatch@v1
+        with:
+          inputs: '{"ref": "${{ github.sha }}"}'
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          workflow: Lint, Test & Build
   bump-version:
     name: 'Bump Version on release created'
     runs-on: ubuntu-latest
@@ -46,14 +55,21 @@ jobs:
   publish-npm:
     name: "Publish to npm"
     runs-on: ubuntu-latest
-    needs: [create-release]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
         with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          ref: ${{ github.event.inputs.ref }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+          with:
+            node-version: 16
+      - name: Install dependencies
+        run: npm install
+      - name: Build package
+        run: npm build
+      - name: Publish to NPM
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          package: dist
+          token: ${{ secrets.NPM_TOKEN }}
