--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -46,6 +46,7 @@ jobs:
   publish-npm:
     name: "Publish to npm"
     runs-on: ubuntu-latest
+    needs: [create-release]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
