--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -24,46 +24,39 @@ jobs:
           version-type:  'patch'
           tag-prefix:  'v'
 
-  create-release:
-    name: Create GitHub Release
-    runs-on: ubuntu-latest
-    needs: [bump-version]
-    if: needs.bump-version.outputs.new-version != ''
+  # create-release:
+  #   name: Create GitHub Release
+  #   runs-on: ubuntu-latest
+  #   needs: [bump-version]
+  #   if: needs.bump-version.outputs.new-version != ''
     
-    steps:
-      - name: New Version
-        env:
-          NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
-        run: echo "new version $NEW_VERSION"    
-      - name: Create Release
-        id: create-release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
-          repo_token: ${{ github.token }}
-          prerelease: true
+  #   steps:
+  #     - name: New Version
+  #       env:
+  #         NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
+  #       run: echo "new version $NEW_VERSION"    
+  #     - name: Create Release
+  #       id: create-release
+  #       uses: marvinpinto/action-automatic-releases@latest
+  #       with:
+  #         automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
+  #         repo_token: ${{ github.token }}
+  #         prerelease: true
 
-  publish-npm:
+   publish-npm:
     name: "Publish to npm"
+    needs: bump-version
     runs-on: ubuntu-latest
-    needs: [create-release]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.inputs.ref }}
-      - name: Setup Node.js
-        env:
-            NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
-        uses: actions/setup-node@v1
+      - run: npm install
+      - run: npm install miever_ui@${{ steps.bump-version.outputs.new-version }}
+      - run: npm run-script build
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 14
-      - name: Install dependencies
-        run: npm install
-      - name: Build package
-        run: npm run-script build
-      - name: Publish to NPM
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          package: dist/index.js
-          token: ${{ secrets.NPM_TOKEN }}
+          registry-url: https://registry.npmjs.org/
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
