--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -48,6 +48,10 @@ jobs:
     needs: bump-version
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2-beta
+        with:
+          node-version: 14
       - run: npm install
       - run: npm install miever_ui@${{ steps.bump-version.outputs.new-version }}
       - run: npm run-script build
