--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           node-version: 14
       - run: npm install
-      - run: npm install miever_ui@${{ steps.bump-version.outputs.new-version }}
+      - run: npm install miever_ui
       - run: npm run-script build
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
