--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -52,8 +52,8 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: 14
+      - run: npm version patch 
       - run: npm install
-      - run: npm install miever_ui
       - run: npm run-script build
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
