--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -52,14 +52,11 @@ jobs:
       - uses: actions/setup-node@v2-beta
         with:
           node-version: 14
+      - run: npm version patch
       - run: npm install
       - run: npm run-script build
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Publish to NPM
+        uses: JS-DevTools/npm-publish@v1
         with:
-          node-version: 14
-          registry-url: https://registry.npmjs.org/
-      - run: npm ci
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          token: ${{ secrets.NPM_TOKEN }}
+          package: ./package.json
