--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,12 +1,12 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Publish to NPM
 
 on:
   workflow_run:
     workflows: ["Bump Version on release created"]
-    branches: [feature/*]
+    branches: [feature/publish_npm_action_fix]
     types:
       - completed
 
