fix: fix publish action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,9 +6,8 @@ name: Publish to NPM
 on:
   workflow_run:
     workflows: ["Bump Version on release created"]
+    types: [completed]
     branches: [feature/publish_npm_action_fix]
-    types:
-      - completed
 
 jobs:
   publish-npm:
