fix: fix publish action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,7 +5,7 @@ name: Publish to NPM
 
 on:
   workflow_run:
-    workflows: ["Bump Version on release created"]
+    workflows: ["Bump_Version"]
     types: [completed]
     branches:
       - 'feature/**'
