fix: fix publish action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,8 +5,10 @@ name: Publish to NPM
 
 on:
   workflow_run:
-    workflows: ["Bump Version"]
-    types: [completed]
+    workflows:
+      - Bump Version
+    types:
+      - completed
     branches:
       - 'feature/**'
 
