fix: fix publish action

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,11 +5,11 @@ name: Publish to NPM
 
 on:
   workflow_run:
-    workflows: ["Bump Version"]
+    workflows: [Bump Version]
     types:
       - completed
     branches:
-      - feature/publish_npm_action_fix
+      - 'feature/*'
 
 jobs:
   publish-npm:
