--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Bump_Version
+name: BumpVersion
 
 on:
   push:
@@ -23,6 +23,7 @@ jobs:
         with:
           version-type:  'patch'
           tag-prefix:  'v'
+      run: gh workflow run npm-publish.yml
 
   # create-release:
   #   name: Create GitHub Release
