fix: fix publish action

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           version-type:  'patch'
           tag-prefix:  'v'
-      run: gh workflow run npm-publish.yml
+      - run: gh workflow run npm-publish.yml
 
   # create-release:
   #   name: Create GitHub Release
