--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -24,6 +24,8 @@ jobs:
           version-type:  'patch'
           tag-prefix:  'v'
       - run: gh workflow run npm-publish.yml
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   # create-release:
   #   name: Create GitHub Release
