--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -3,6 +3,13 @@
 
 name: Publish to NPM
 
+on:
+  workflow_run:
+    workflows: [BumpVersion]
+    types: [completed]
+    branches:
+      - 'feature/*'
+
 jobs:
   publish-npm:
     name: "Publish to npm"
