--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -15,8 +15,8 @@ jobs:
     outputs:
       new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
-      # - uses: actions/checkout@v3
-      # - id: version-bump
+      - uses: actions/checkout@v3
+      - id: version-bump
       #   uses:  'phips28/gh-action-bump-version@master'
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
