--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -18,15 +18,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - id: version-bump
-      #   uses:  'phips28/gh-action-bump-version@master'
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     version-type:  'patch'
-      #     tag-prefix:  'v'
-      - run: gh workflow run npm-publish.yml
+        uses:  'phips28/gh-action-bump-version@master'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          version-type:  'patch'
+          tag-prefix:  'v'
 
   # create-release:
   #   name: Create GitHub Release
