fix: fix publish action

--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,10 +4,8 @@
 name: BumpVersion
 
 on:
-  workflow_dispatch:
-  push:
-    branches:
-      - 'feature/*'
+  release:
+    types: [created]
 
 jobs:
   bump-version:
