--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: BumpVersion
 
 on:
   push:
@@ -12,11 +12,33 @@ jobs:
   bump-version:
     name: 'Bump Version on release created'
     runs-on: ubuntu-latest
+    outputs:
+      new-version: ${{ steps.version-bump.outputs.newTag }}
     steps:
       - uses: actions/checkout@v3
-      - uses:  'phips28/gh-action-bump-version@master'
+      - id: version-bump
+        uses:  'phips28/gh-action-bump-version@master'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           version-type:  'patch'
           tag-prefix:  'v'
+
+  # create-release:
+  #   name: Create GitHub Release
+  #   runs-on: ubuntu-latest
+  #   needs: [bump-version]
+  #   if: needs.bump-version.outputs.new-version != ''
+    
+  # steps:
+  #   - name: New Version
+  #     env:
+  #       NEW_VERSION: ${{ steps.bump-version.outputs.new-version }}
+  #     run: echo "new version $NEW_VERSION"    
+  #   - name: Create Release
+  #     id: create-release
+  #     uses: marvinpinto/action-automatic-releases@latest
+  #     with:
+  #       automatic_release_tag: ${{needs.bump-version.outputs.new-version}}
+  #       repo_token: ${{ github.token }}
+  #       prerelease: true
