--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "Miever",
     "React Components Library"
   ],
-"scripts": {
+  "scripts": {
     "dev": "vite",
     "test": "jest",
-    "build": "tsc -b && vite build",
+    "build": "npm run clean-build && tsc -b tsconfig.build.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -33,7 +33,7 @@
     "clean-build": "rimraf ./dist",
     "prepublish": "npm run lint && npm run test && npm run build",
     "prepare": "husky install"
-},
+  },
   "dependencies": {
     "@mdx-js/react": "^3.1.0",
     "miever_ui": "^0.1.2",
@@ -63,6 +63,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.10.2",
     "globals": "^15.11.0",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "sass-embedded": "^1.80.6",
