--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,7 @@
     "declaration": true,
     "declarationDir": "./dist/types",
     "emitDeclarationOnly": true,
+    "outDir": "./dist",
     "rootDir": "./src",
     "skipLibCheck": true,
     "strict": true
